Copy for lessons learned sample NUX post.

--- a/resources/samples/avatars.html
+++ b/resources/samples/avatars.html
@@ -24,3 +24,13 @@
         data-email='adrian@sample.com'
         data-avatar-url='https://cdn.filestackcontent.com/wXZpWBPHQwKvSy8R13gG'
         data-found='true'>@Adrian</span>
+
+<span class='medium-editor-mention-at oc-mention'
+        data-first-name='Sam'
+        data-last-name='Darnell'
+        data-slack-username='Sam Darnell'
+        data-user-id='9797-9797-9797'
+        data-email='sam@sample.com'
+        data-avatar-url='https://cdn.filestackcontent.com/zUHZ3nSoRhiazQ2yLLTL'
+        data-found='true'>@Sam</span>
+
