Work on sample content.

--- a/resources/samples/avatars.html
+++ b/resources/samples/avatars.html
@@ -32,5 +32,31 @@
         data-user-id='9797-9797-9797'
         data-email='sam@sample.com'
         data-avatar-url='https://cdn.filestackcontent.com/zUHZ3nSoRhiazQ2yLLTL'
-        data-found='true'>@Sam</span>
+        data-found='true'>@Sam Darnell</span>
 
+<span class='medium-editor-mention-at oc-mention'
+        data-first-name='Lane'
+        data-last-name='Kennedy'
+        data-slack-username='lane'
+        data-user-id='9797-9797-9797'
+        data-email='lane@sample.com'
+        data-avatar-url='https://cdn.filestackcontent.com/2kNyvKINRQixHyQp454T'
+        data-found='true'>@lane</span>
+
+<span class='medium-editor-mention-at oc-mention'
+        data-first-name='Dimitri'
+        data-last-name='Payet'
+        data-slack-username='Dimitri'
+        data-user-id='9797-9797-9797'
+        data-email='dimitri@sample.com'
+        data-avatar-url='https://cdn.filestackcontent.com/eXKbQZjzQE6RuEpeiqwx'
+        data-found='true'>@Dimitri</span>
+
+<span class='medium-editor-mention-at oc-mention'
+        data-first-name='Preta'
+        data-last-name='Simms'
+        data-slack-username='preta'
+        data-user-id='9797-9797-9797'
+        data-email='preta@sample.com'
+        data-avatar-url='https://cdn.filestackcontent.com/X6trgyiORay3dAHH4B2y'
+        data-found='true'>@Preta Simms</span>
